replaced with Revit 2021.1 SDK from REVIT_2021_1_SDK.msi, 2020-08-01 12:42 PM 378425344 bytes

--- a/SDK/Samples/SamplesIndex.htm
+++ b/SDK/Samples/SamplesIndex.htm
@@ -73,6 +73,7 @@
 <li><a href="SamplesContent.htm#2019.1" target="main">2019.1</a></li>
 <li><a href="SamplesContent.htm#2019.2" target="main">2019.2</a></li>
 <li><a href="SamplesContent.htm#2020.0" target="main">2020.0</a></li>
+<li><a href="SamplesContent.htm#2021.1" target="main">2021.1</a></li>
 
    </ul>
    <li><a href="SamplesContent.htm#By_Name_alphabetically" target="main">By Name alphabetically</a></li>
@@ -101,6 +102,7 @@
 <li><a href="SamplesContent.htm#CancelSave" target="main">CancelSave</a></li>
 <li><a href="SamplesContent.htm#CapitalizeAllTextNotes" target="main">CapitalizeAllTextNotes</a></li>
 <li><a href="SamplesContent.htm#ChangesMonitor" target="main">ChangesMonitor</a></li>
+<li><a href="SamplesContent.htm#CivilAlignments" target="main">CivilAlignments</a></li>
 <li><a href="SamplesContent.htm#CompoundStructure" target="main">CompoundStructure</a></li>
 <li><a href="SamplesContent.htm#CreateAirHandler" target="main">CreateAirHandler</a></li>
 <li><a href="SamplesContent.htm#CreateBeamsColumnsBraces" target="main">CreateBeamsColumnsBraces</a></li>
